# bionicdb

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  schema.sql
api/: README.md  pyproject.toml
api/app/: db.py  main.py  mcp_server.py
api/static/: app.js  index.html  styles.css
objects/: akita.txt  angler.txt  aurora.txt  barbet.txt  blazer.txt  bluejay.txt  blueline.txt  bonito.txt  bramble.txt  bullhead.txt  caiman.txt  cheetah.txt  comet.txt  coral.txt  crosshatch.txt  eos.txt  felix.txt  flame.txt  frankel.txt  fugu.txt  hammerhead.txt  husky.txt  komodo.txt  lynx.txt  marlin.txt  menari_btwifi.txt  menari_lte.txt  mustang.txt  oriole.txt  panther.txt  r11.txt  r11btwifi.txt  rango.txt  raven.txt  razor.txt  razorg.txt  redfin.txt  ryu.txt  sailfish.txt  sargo.txt  (+13 more)
